[Fix] Aligned stat chart

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ body {
   flex: 8 1 0%;
 }
 
+.flex-2 {
+  flex: 2 1 0%;
+}
+
 .flex-3 {
   flex: 3 1 0%;
 }
